--- a/App.config
+++ b/App.config
@@ -33,6 +33,10 @@
         <assemblyIdentity name="ManagedCuda" publicKeyToken="242d898828717aa0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.1.300.0" newVersion="9.1.300.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
