--- a/packages.config
+++ b/packages.config
@@ -18,10 +18,14 @@
   <package id="ManagedCuda-80" version="8.0.22" targetFramework="net472" />
   <package id="ManagedCuda-CudaDNN" version="8.0.22" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.ML.OnnxRuntime" version="1.16.0" targetFramework="net472" />
+  <package id="Microsoft.ML.OnnxRuntime.Gpu" version="1.16.0" targetFramework="net472" />
+  <package id="Microsoft.ML.OnnxRuntime.Managed" version="1.16.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="7.0.0" targetFramework="net472" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Tensors" version="0.1.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
